--- a/LECTURE13.html
+++ b/LECTURE13.html
@@ -477,8 +477,7 @@ for the first midterm.</p>
 <li>Chapter 3: Age structured population and matrix models</li>
 <li>Chapter 4: Metapopulations</li>
 </ul></li>
-<li>All material covered in lectures, including the following web pages
-and corresponding lectures and top hat pages:
+<li>All material covered in lectures, including the following web pages:
 <ul>
 <li><a href="LECTURE1.html">Systems thinking and modeling</a></li>
 <li><a href="LECTURE2.html">Exponential growth</a></li>
