--- a/LECTURE13.html
+++ b/LECTURE13.html
@@ -858,8 +858,8 @@ happens? Does this make sense?</p></li>
 the distant sink still function as a sink population? That is, is it
 occupied continuously? If not, what is the minimum dispersal rate that
 generally ensures that the distant sink is continuously occupied (make
-sure the lower bound of the 95% region for abundance in this patch is
-above 2 for all years)? [PointSolutions]</p></li>
+sure the lower bound of the 95% confidence region for abundance in this
+patch is above 2 for all years)? [PointSolutions]</p></li>
 <li><p>Now reduce the population growth rate in the source population
 (“lambda good”) to 1.1. What happens now? Does the source population
 still operate as an effective source (that is, does it support
@@ -875,7 +875,7 @@ population?</p>
 1.1 and the max dispersal rate to 25%. What is the approximate
 equilibrium abundance of the distant sink? How does this relate to its
 carrying capacity? Generate a figure (using InsightMaker) that
-illustrates the abundance of the distant sink vs. carrying capacity
+illustrates the abundance of the mid-range sink vs. carrying capacity
 (over time). How does this figure illustrate the concept of a
 <strong>pseudo-sink</strong>.</li>
 </ol>
@@ -915,7 +915,7 @@ random code
 <p>This will force 50% of the source population to try to move to the
 sink habitat each year! Nearly all individuals that are in the sink
 habitat will attempt to stay there.</p>
-<p>Also, change the lambda for the nearby sink to 0.25, (meaning 75%
+<p>Also, change the lambda for the nearby sink to 0.25 (meaning 75%
 decline each year due to poisoning). To do this, replace the [lambda
 bad] term in the births/deaths equation for the nearby sink with the
 number “0.25”. Open the equation editor for this flow- after you change,
@@ -935,13 +935,14 @@ href="https://insightmaker.com/insight/4WctojC6L70BOJbe2oVQj3/Ecological-Trap">h
 <li>Run the model with the nearby sink as an ecological trap, and try to
 address the following questions:</li>
 </ol>
-<p><strong>Q</strong>: in what way is the nearby sink now an
+<p><strong>Q</strong>: In what way is the nearby sink now an
 <em>ecological trap</em>? Are all sink populations really <em>ecological
 traps</em>?</p>
-<p><strong>Q</strong>: are metapopulations better off without sink
-populations? Could it ever be <em>desirable</em> to remove a sink
-population to improve the conservation status of a metapopulation? Under
-what circumstances?</p>
+<p><strong>Q</strong>: Are metapopulations better off without sink
+populations?</p>
+<p><strong>Q</strong>: Could it ever be <em>desirable</em> to remove a
+sink population to improve the conservation status of a metapopulation?
+Under what circumstances?</p>
 </div>
 <div id="benefits-of-sink-populations" class="section level4">
 <h4>Benefits of sink populations!</h4>
