--- a/LECTURE12.html
+++ b/LECTURE12.html
@@ -484,7 +484,7 @@ reverse population declines (declining population paradigm).</p>
 <p><strong>Q</strong>: Are PVA models always spatially-explicit?</p>
 <div id="the-pva-process-recipe-for-pva" class="section level3">
 <h3>The PVA process (recipe for PVA!)</h3>
-<p><img src="PVAschematic1.png" /></p>
+<p><img src="PVAschematic1.png" style="width:40.0%" /></p>
 <p>The process of building a PVA model is
 <strong>iterative</strong>.</p>
 <p>For example – after running your model (step 4) and looking at your
