--- a/LECTURE9.html
+++ b/LECTURE9.html
@@ -345,7 +345,7 @@ div.tocify {
       <a href="LECTURE2.html">Introduction to population ecology</a>
     </li>
     <li>
-      <a href="LECTURE3.html">Thomas Robert Malthus (Limits to growth)</a>
+      <a href="LECTURE3.html">Thomas Malthus (Limits to growth)</a>
     </li>
     <li>
       <a href="LECTURE4.html">Population Regulation (Logistic growth)</a>
@@ -366,19 +366,10 @@ div.tocify {
       <a href="LECTURE9.html">Small population paradigm</a>
     </li>
     <li>
-      <a href="LECTURE10.html">Individual-based models</a>
-    </li>
-    <li>
       <a href="LECTURE11.html">Declining population paradigm</a>
     </li>
     <li>
-      <a href="LECTURE12.html">Population Viability Analysis</a>
-    </li>
-    <li>
       <a href="LECTURE13.html">Metapopulations</a>
-    </li>
-    <li>
-      <a href="LECTURE14.html">PVA example: pdogs and ferrets</a>
     </li>
     <li>
       <a href="LECTURE15.html">Parameter estimation</a>
@@ -435,7 +426,16 @@ div.tocify {
       <a href="FINAL_PROJECTS.html">Final Projects!</a>
     </li>
     <li>
+      <a href="LECTURE12.html">Overview of PVA</a>
+    </li>
+    <li>
+      <a href="LECTURE14.html">PVA example: pdogs and ferrets</a>
+    </li>
+    <li>
       <a href="EXTRA_CREDIT.html">Extra Credit!</a>
+    </li>
+    <li>
+      <a href="LECTURE10.html">Individual-based models</a>
     </li>
   </ul>
 </li>
@@ -502,7 +502,7 @@ eradicate a relatively common gene variant (allele) from a population
 reproductive processes).</p>
 <p>In small populations, random chance can be the <em>primary
 driver</em> of genetic change over time!</p>
-<p><img src="geneticdrift1.png" /></p>
+<p><img src="geneticdrift1.png" style="width:75.0%" /></p>
 <p>Let’s imagine that the balls in the jars in the above figure are
 individuals. The black dots indicate how many offspring each individual
 will have (thereby passing on its genes). The different colored balls
@@ -527,7 +527,7 @@ would be vanishingly small.</p>
 </div>
 <div id="inbreeding-depression" class="section level3">
 <h3>Inbreeding depression</h3>
-<p><img src="inbreeding1.jpg" /></p>
+<p><img src="inbreeding1.jpg" style="width:50.0%" /></p>
 <p>Inbreeding depression is another problem peculiar to small
 populations.</p>
 <p>Most diploid populations have some ‘bad’ gene variants (alleles) in
@@ -615,17 +615,17 @@ href="https://www.cpsg.org/our-approach/science-based-tools/vortex">Vortex</a>,
 gets its name from the extinction vortex concept. Vortex does allow
 explicit modeling of inbreeding and loss of genetic diversity in small
 populations.</p>
-<p><img src="Vortex10.jpg" /></p>
+<p><img src="Vortex10.jpg" style="width:50.0%" /></p>
 </div>
 <div id="example-aruba-island-rattlesnake" class="section level2">
 <h2>Example: Aruba island rattlesnake</h2>
 <p>The Aruba Island Rattlesnake, or Cascabel (<em>Crotalus durissus
 unicolor</em>), is the top predator on the island of Aruba, and
 primarily consumes rodents.</p>
-<p><img src="aruba_rattlesnake1.jpg" /></p>
+<p><img src="aruba_rattlesnake1.jpg" style="width:50.0%" /></p>
 <p>The Aruba island rattlesnake, as you might expect, occurs only on the
 island of Aruba.</p>
-<p><img src="aruba1.png" /></p>
+<p><img src="aruba1.png" style="width:50.0%" /></p>
 <p>The Aruba rattlesnake was listed as <em>Critically Endangered</em> by
 IUCN (it is no longer listed as of 2021 due to lack of information), and
 has several attributes that make it particularly susceptible to falling
