--- a/FINAL_PROJECTS.html
+++ b/FINAL_PROJECTS.html
@@ -662,10 +662,11 @@ need to justify the time frame for your model- you should not just use a
 InsightMaker (and if you do use a 20-year time frame you need to be very
 specific about why- otherwise I’ll assume you simply did not change the
 default!).</p>
-<p>Unlike the “initial PVA” assigment, this time you need to use
-complete sentences- no bulleted lists please! Also, try to avoid using
-InsightMaker jargon (RandPoisson, stocks, flows, links, ghost primitive,
-etc.). Instead, try to describe your model using “plain English”.</p>
+<p>Unlike the “Initial PVA and Methods” assignment, this time you need
+to use complete sentences- no bulleted lists please! Also, try to avoid
+using InsightMaker jargon (RandPoisson, stocks, flows, links, ghost
+primitive, etc.). Instead, try to describe your model using “plain
+English”.</p>
 <p>The methods section should detail more than just how you put your
 model together- it should also detail how you used the model to test
 your research questions.</p>
@@ -682,7 +683,7 @@ questions?</p>
 <p>In general, try to avoid including figures and tables reproduced from
 other studies. Just describe the key results in words and refer to the
 original source. Including these figures in your paper implies you
-created the figure!</p>
+created the figure yourself!</p>
 <p>You need to define what you mean by ‘viability’, since there is no
 standard definition. If you are assessing minimum viable population size
 (MVP), you need to define your viability criterion- for example, ‘we
@@ -691,11 +692,16 @@ to be viable’.</p>
 <p>Try to avoid using acronyms like PVA and MVP without first defining
 what stand for.</p>
 <p>Most of you will use female-only models- and if so you should state
-this explicitly.</p>
+this explicitly, and describe how you accounted for this in your
+fecundity estimates (e.g., you assumed a 50% sex ratio, and therefore
+you multiplied the total birth rate by 50% to estimate the total number
+of female offspring produced per female).</p>
 <p>For both the methods and results, use the past tense- you are
 describing what you did, not what you will do.</p>
 <p>Please include a link to your InsightMaker model in your Methods
-section. If you used R, please provide your R code as an appendix.</p>
+section (ideally, at the top of your methods section, just to make it
+easier on me to find it!). If you used R, please provide your R code as
+an appendix.</p>
 </div>
 <div id="results" class="section level3">
 <h3>Results</h3>
@@ -711,19 +717,34 @@ questions?</p>
 several sentences long and should have enough detail so that a reader
 can understand the figure without referring to the main text. All figure
 captions should include the name of the species being studied, should
-describe what axes represent and describe any symbols that are used.
-Figure captions should also describe where the data come from (in most
-cases, a population simulation model!).</p>
+describe what the axes represent and describe any symbols/colors that
+are used. Figure captions should also describe where the data come from
+(in most cases, a population simulation model!).</p>
 <p>If you want to include a table from insightmaker, please import your
 insightmaker table results to excel so you can format nicely (rather
 than presenting a screenshot of an insightmaker table). Also try to
-avoid fractional individuals in your tables Don’t be constrained to
-insightmaker’s figures!</p>
+avoid fractional individuals in your tables</p>
+<p>Don’t be constrained to insightmaker’s figures! See the <a
+href="LECTURE12.html">“PVA” lecture</a> for some examples of the kinds
+of figures you might make to present your results most effectively.
+Don’t feel like you have to use R to make your figures- Excel is
+fine!!</p>
+<p>It’s okay to include one or two insightmaker figures (abundance over
+time), but for most of you it will be better (more concise, more
+informative) to summarize your results in a different way (like
+illustrating final abundance for each scenario as a bar plot, with each
+scenario presented side by side). Sometimes it helps to sketch out what
+you want the figure to look like, and then work “backwards” to try and
+figure out how to make that figure.</p>
 </div>
 <div id="discussion" class="section level3">
 <h3>Discussion</h3>
 <p>This is where you describe what your results really tell us with
-respect to your main questions.</p>
+respect to your main questions. The first paragraph in your discussion
+section should summarize the key results and why they are important.
+Include citations/references to other studies to indicate where your
+study fits into a broader context. I expect to see at least 3-4 in-text
+citations in your Discussion section.</p>
 <p>Also, in your discussion you should:</p>
 <ul>
 <li>Describe any new questions that came up in the process of building
@@ -743,27 +764,16 @@ anything before your final submission.</p>
 href="WrittenProject_rubric.docx">here</a>.</p>
 </div>
 </div>
-<div id="fourth-project-related-assignment-the-oral-presentation"
+<div id="fourth-project-related-assignment-peer-reviewfeedback-session"
 class="section level2">
-<h2>Fourth project-related assignment: the oral presentation!</h2>
-<p>Your group presentation should be in the style of an oral
-presentation at a conference. See below for guidance on giving a good
-oral presentation!</p>
-<p>Presentations will take place during our final two lab periods.</p>
-<p>You will have 12 minutes to give your presentations, with 3
-additional minutes for questions.</p>
-<p>A rubric for the presentations can be found <a
-href="presentationProject_rubric.docx">here</a></p>
-</div>
-<div id="final-paper-peer-reviewfeedback-session"
-class="section level2">
-<h2>Final paper peer review/feedback session</h2>
+<h2>Fourth project-related assignment: <strong>peer
+review</strong>/feedback session</h2>
 <p>In lab on Fri Apr 28 we will have a “peer review” session where we
 will have a chance to give each other feedback on draft manuscripts.</p>
 <p>The way it will work is as follows:</p>
 <ol style="list-style-type: decimal">
-<li><p>In the week before the peer review you will receive another
-group’s draft manuscript via WebCampus.</p></li>
+<li><p>In the week before the peer review (probably Wednesday) you will
+receive another group’s draft manuscript via WebCampus.</p></li>
 <li><p>Before lab, please thoroughly read the manuscript you have been
 assigned, and make comments, paying particular attention to the <a
 href="WrittenProject_rubric.docx">grading rubric</a>.</p></li>
@@ -784,6 +794,23 @@ your write-ups and presentations!</p></li>
 </ol>
 <p>Bring your laptops to lab as usual so you can write, save and share
 your peer-review electronically with your classmates/instructors.</p>
+<p>The peer-review session will take approximately 2 hours in total,
+please plan accordingly!</p>
+</div>
+<div id="fifth-project-related-assignment-the-oral-presentation"
+class="section level2">
+<h2>Fifth project-related assignment: the oral presentation!</h2>
+<p>Your group presentation should be in the style of an oral
+presentation at a conference. See below for guidance on giving a good
+oral presentation!</p>
+<p>Presentations will take place during our final two lab periods.</p>
+<p>You will have 12 minutes to give your presentations, with 3
+additional minutes for questions.</p>
+<p>A rubric for the presentations can be found <a
+href="presentationProject_rubric.docx">here</a></p>
+<p>Please plan to be in lab for the full lab period on May 5 for the
+final presentations. Attendance and participation as an active audience
+member (e.g., asking questions!) is an important part of this class.</p>
 <div id="tips-for-a-great-presentation" class="section level3">
 <h3>Tips for a great presentation!</h3>
 <p>Here are some general notes about how to prepare and deliver a great
