--- a/schedule.html
+++ b/schedule.html
@@ -664,17 +664,17 @@ InsightMaker</a></td>
 <tr class="even">
 <td align="left">Week 12</td>
 <td align="left">4/10/2023</td>
-<td align="left">LECTURE: <a href="LECTURE13.html">Source-sink
-dynamics</a></td>
-<td align="left"><a href="griffin1.pdf">Griffin et al</a></td>
+<td align="left">LECTURE: <a
+href="LECTURE13.html">Metapopulations</a></td>
+<td align="left">Gotelli Chapter 4</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">4/12/2023</td>
-<td align="left">LECTURE: <a href="LECTURE15.html">Parameter
-estimation</a></td>
-<td align="left"><a href="amstrup1.pdf">Amstrup et al Chapter 1</a></td>
+<td align="left">LECTURE: <a href="LECTURE13.html">Source-sink
+dynamics</a></td>
+<td align="left"><a href="griffin1.pdf">Griffin et al</a></td>
 <td align="left">PVA models due</td>
 </tr>
 <tr class="even">
@@ -710,9 +710,9 @@ href="LAB7.html">Parameter estimation: mark-recapture data</a></td>
 <tr class="even">
 <td align="left">Week 14</td>
 <td align="left">4/24/2023</td>
-<td align="left">LECTURE: <a href="LECTURE16.html">Species interactions:
-competition</a></td>
-<td align="left">Gotelli Chapter 5</td>
+<td align="left">LECTURE: <a href="LECTURE15.html">Parameter
+estimation</a></td>
+<td align="left"><a href="amstrup1.pdf">Amstrup et al Chapter 1</a></td>
 <td align="left">Complete PVA drafts</td>
 </tr>
 <tr class="odd">
@@ -720,7 +720,7 @@ competition</a></td>
 <td align="left">4/26/2023</td>
 <td align="left">LECTURE: <a href="LECTURE16.html">Species interactions:
 competition</a></td>
-<td align="left"></td>
+<td align="left">Gotelli Chapter 5</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
@@ -780,6 +780,34 @@ predator-prey</a></td>
 <td align="left">FINAL PAPERS DUE (last day of finals)</td>
 <td align="left"></td>
 <td align="left">Final PVA write-up</td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
 </tr>
 </tbody>
 </table>
