--- a/LECTURE16.html
+++ b/LECTURE16.html
@@ -465,8 +465,8 @@ div.tocify {
 <h2>Species interactions</h2>
 <p>PVA, as you may recall, tends to be very single-species focused.</p>
 <p>BUT population ecology doesn’t have to be single-species focused.
-There are many cases where we would do well to think about species
-interactions specifically.</p>
+There are many cases where we would do well to consider species
+interactions.</p>
 <p>From a modeling standpoint, this is where things really get
 interesting – with species interactions, we start to see some really
 unpredictable emergent properties!</p>
@@ -788,8 +788,7 @@ plot(1,1,pch=&quot;&quot;,xlim=xlim,ylim=ylim,xlab=&quot;N1&quot;,ylab=&quot;N2&
 phasearrows.draw(new)</code></pre>
 <p><img src="LECTURE16_files/figure-html/unnamed-chunk-11-1.png" width="672" /></p>
 <pre class="r"><code>#
-## END MODEL SPECIFICATION AND INITIALIZATION
-#######################################################################################</code></pre>
+## END MODEL SPECIFICATION AND INITIALIZATION</code></pre>
 <p>Take any arbitrary starting point. Now we can trace the trajectory
 that the system will take in phase space.</p>
 <p>Try it!!</p>
@@ -812,15 +811,12 @@ abline(K1/Alpha,-(K1/Alpha)/K1,col=&quot;red&quot;,lwd=3)   # species 1
 abline(K2,-K2/(K2/Beta),col=&quot;blue&quot;,lwd=3)   # species 1</code></pre>
 <p><img src="LECTURE16_files/figure-html/unnamed-chunk-12-1.png" width="672" /></p>
 <p>The red line represents the conditions under which the growth rate of
-species 1 is zero.</p>
-<p><strong>Q</strong>: under what conditions is carrying capacity “used
-up” for species 1??</p>
+species 1 is zero- that is, the conditions under which carrying capacity
+is “used up” for species 1.</p>
 <p>Below the red line, species 1 will tend to increase.</p>
 <p>Above the red line, species 1 will tend to decrease.</p>
 <p>The blue line (isocline) represents the conditions under which
 carrying capacity is used up for species 2!</p>
-<p><strong>Q</strong>: under what conditions is carrying capacity “used
-up” for species 2??</p>
 <p>Below the blue line, species 2 will tend to increase.</p>
 <p>Above the blue line, species 2 will tend to decrease.</p>
 <p><strong>Q</strong>: consider the point where the two isoclines cross.
@@ -945,7 +941,6 @@ abline(K2,-K2/(K2/Beta),col=&quot;blue&quot;,lwd=3)   # species 2</code></pre>
 species 2 tried to invade? And vice versa?</p>
 <p><strong>Q</strong>: what would happen if both species tried to invade
 a vacant habitat at the same time?</p>
-<p><strong>Q</strong>” ”</p>
 </div>
 </div>
 <div id="phase-space-in-insightmaker" class="section level3">
