--- a/FINAL_PROJECTS.html
+++ b/FINAL_PROJECTS.html
@@ -608,10 +608,10 @@ a meeting on our shared Google Sheet!).</p></li>
 </ol>
 </div>
 <div
-id="third-project-related-assignment-the-written-project-rough-draft"
+id="third-project-related-assignment-the-written-project-rough-draft-and-final-draft"
 class="section level2">
-<h2>Third project-related assignment: the written project (rough
-draft)!</h2>
+<h2>Third project-related assignment: the written project (rough draft
+and final draft)!</h2>
 <p>Your final written paper is expected to be in the style of a
 <strong>scientific manuscript</strong>. That is, it should have a
 <em>title</em>, <em>introduction</em>, <em>methods</em>,
@@ -622,6 +622,16 @@ model (e.g., InsightMaker link or R code).</p>
 Please be as concise as possible while still covering all the key
 elements in the grading rubric. You can use any standard format for your
 references (e.g., APA), all we ask is that you be consistent!</p>
+<div id="abstract" class="section level3">
+<h3>Abstract</h3>
+<p>An abstract is often the most critical part of a scientific
+manuscript- because it’s often the only part that many people read! A
+good abstract effectively summarizes everything in the paper- what the
+study is about, why readers should care, what the research questions
+are, how you answered your questions and what your key findings were,
+and what the findings mean in a broader context. All in about 250 words
+or less!</p>
+</div>
 <div id="title" class="section level3">
 <h3>Title</h3>
 <p>A good title should be informative, should have the species name and
