--- a/LECTURE18.html
+++ b/LECTURE18.html
@@ -496,7 +496,8 @@ and corresponding lectures and top hat pages:
 <li><a href="LECTURE12.html">Population Viability Analysis</a></li>
 <li><a href="LECTURE13.html">Metapopulations and source-sink
 dynamics</a>]</li>
-<li><a href="LECTURE15.html">Parameter estimation</a></li>
+<li><a href="LECTURE15.html">Parameter estimation</a> [NOTE: this topic
+will not be covered in the exam this year]</li>
 <li><a href="LECTURE16.html">Competition models</a></li>
 <li><a href="LECTURE17.html">Predation models</a></li>
 <li>NOTE: all lectures have been recorded and are available via the
@@ -531,10 +532,11 @@ session!</p>
 <p>Sage will also provide an additional final office hour on Thursday
 May 11 (look for announcement).</p>
 <p>NOTE: we skipped over the <a href="LECTURE10.html">lecture on
-individual-based models</a>- this topic will (of course) <em>not be
-included on the final exam</em></p>
+individual-based models</a> and the <a href="LECTURE15.html">lecture on
+parameter estimation</a>- these topics will <em>not be included on the
+final exam</em></p>
 <p><em>The exam will consist of a mixture of multiple-choice and
-short-answer questions (including a few definitions).</em></p>
+short-answer questions (perhaps including a few definitions).</em></p>
 </div>
 <div id="final-logistics" class="section level3">
 <h3>Final logistics</h3>
@@ -558,16 +560,16 @@ to provide comments as quickly as we can!</li>
 <div id="extra-credit" class="section level4">
 <h4>Extra credit</h4>
 <ul>
-<li>Will accept up to three extra credit write-ups</li>
+<li>Will accept up to two extra credit write-ups</li>
 <li>Submit extra credit assignments via webcampus (file submission) –
-one submission per each of the four ‘assignments’.</li>
+one submission per each assignment.</li>
 <li>Due when final papers are due, by Mon May 15 at 11:59pm).</li>
 </ul>
 </div>
 <div id="review-session" class="section level4">
 <h4>Review session</h4>
 <ul>
-<li>Wed 5/10 at 930am in our regular classroom.</li>
+<li>Wed 5/10 at 10am in our regular classroom.</li>
 </ul>
 </div>
 <div id="please-fill-out-your-course-evaluations"
