--- a/LECTURE1.html
+++ b/LECTURE1.html
@@ -345,7 +345,7 @@ div.tocify {
       <a href="LECTURE2.html">Introduction to population ecology</a>
     </li>
     <li>
-      <a href="LECTURE3.html">Thomas Robert Malthus (Limits to growth)</a>
+      <a href="LECTURE3.html">Thomas Malthus (Limits to growth)</a>
     </li>
     <li>
       <a href="LECTURE4.html">Population Regulation (Logistic growth)</a>
@@ -366,19 +366,10 @@ div.tocify {
       <a href="LECTURE9.html">Small population paradigm</a>
     </li>
     <li>
-      <a href="LECTURE10.html">Individual-based models</a>
-    </li>
-    <li>
       <a href="LECTURE11.html">Declining population paradigm</a>
     </li>
     <li>
-      <a href="LECTURE12.html">Population Viability Analysis</a>
-    </li>
-    <li>
       <a href="LECTURE13.html">Metapopulations</a>
-    </li>
-    <li>
-      <a href="LECTURE14.html">PVA example: pdogs and ferrets</a>
     </li>
     <li>
       <a href="LECTURE15.html">Parameter estimation</a>
@@ -435,7 +426,16 @@ div.tocify {
       <a href="FINAL_PROJECTS.html">Final Projects!</a>
     </li>
     <li>
+      <a href="LECTURE12.html">Overview of PVA</a>
+    </li>
+    <li>
+      <a href="LECTURE14.html">PVA example: pdogs and ferrets</a>
+    </li>
+    <li>
       <a href="EXTRA_CREDIT.html">Extra Credit!</a>
+    </li>
+    <li>
+      <a href="LECTURE10.html">Individual-based models</a>
     </li>
   </ul>
 </li>
@@ -551,22 +551,6 @@ positive! And don’t forget that all models are wrong!</p>
 means <em>learning by doing</em>! Instructor-led lectures will be kept
 short, and we will spend significant class time (and pretty much all of
 lab time) on our computers, working through problems.</p>
-</div>
-<div id="class-example-harvest-of-horseshoe-crabs-in-delaware-bay"
-class="section level2">
-<h2>Class example: harvest of horseshoe crabs in Delaware Bay</h2>
-<p>Real-world example- we will revisit throughout the class!</p>
-<p><img src="rekn_hsc1.png" style="width:50.0%" /></p>
-<p><em>Why harvest horseshoe crabs?</em> Eel and Whelk (“Conch”)
-fisheries rely on horseshoe crabs as bait.</p>
-<p><em>Why restrict horseshoe crab harvest?</em> Red Knots and other
-shorebirds depend on horseshoe crab eggs as a key source of energy when
-migrating northward in the spring!</p>
-<p><strong>Problem statement</strong>: “Manage harvest of horseshoe
-crabs in the Delaware Bay to maximize harvest but also to maintain
-ecosystem integrity, provide adequate stopover habitat for migrating
-shorebirds, and ensure that the abundance of horseshoe crabs is not
-limiting the red knot stopover population or slowing recovery”</p>
 </div>
 <div id="in-class-exercise-insightmaker" class="section level2">
 <h2>In-class Exercise: InsightMaker</h2>
