--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Applied Population Ecology, Spring 2023" />
+<meta name="author" content="Applied Population Ecology, Spring 2024" />
 
 
 <title>Welcome to NRES 470/670</title>
 
-<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.24/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
@@ -30,7 +30,7 @@
        h6 {font-size: 12px;}
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
-<script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
+<script src="site_libs/jqueryui-1.13.2/jquery-ui.min.js"></script>
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
@@ -145,11 +145,15 @@ $(document).ready(function () {
     href = "index.html";
   var menuAnchor = $('a[href="' + href + '"]');
 
-  // mark it active
-  menuAnchor.tab('show');
-
-  // if it's got a parent navbar menu mark it active as well
-  menuAnchor.closest('li.dropdown').addClass('active');
+  // mark the anchor link active (and if it's in a dropdown, also mark that active)
+  var dropdown = menuAnchor.closest('li.dropdown');
+  if (window.bootstrap) { // Bootstrap 4+
+    menuAnchor.addClass('active');
+    dropdown.find('> .dropdown-toggle').addClass('active');
+  } else { // Bootstrap 3
+    menuAnchor.parent().addClass('active');
+    dropdown.addClass('active');
+  }
 
   // Navbar adjustments
   var navHeight = $(".navbar").first().height() + 15;
@@ -178,8 +182,8 @@ $(document).ready(function () {
   border-radius: 4px;
 }
 
-.tabset-dropdown > .nav-tabs > li.active:before {
-  content: "";
+.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "\e259";
   font-family: 'Glyphicons Halflings';
   display: inline-block;
   padding: 10px;
@@ -187,16 +191,9 @@ $(document).ready(function () {
 }
 
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-  content: "&#xe258;";
-  border: none;
-}
-
-.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-  content: "";
+  content: "\e258";
   font-family: 'Glyphicons Halflings';
-  display: inline-block;
-  padding: 10px;
-  border-right: 1px solid #ddd;
+  border: none;
 }
 
 .tabset-dropdown > .nav-tabs > li.active {
@@ -455,7 +452,7 @@ div.tocify {
 
 
 <h1 class="title toc-ignore">Welcome to NRES 470/670</h1>
-<h4 class="author">Applied Population Ecology, Spring 2023</h4>
+<h4 class="author">Applied Population Ecology, Spring 2024</h4>
 
 </div>
 
@@ -464,39 +461,41 @@ div.tocify {
 <strong>Office:</strong> Fleischmann Agriculture, room 220e<br />
 <strong>Phone:</strong> 775-682-7449<br />
 <strong>Email</strong>: kevinshoemaker_at_unr_dot_edu<br />
-<strong>Office hours</strong>: Mondays from 4 to 5pm in FA 220e<br />
+<strong>Office hours</strong>: Mondays from 3 to 4pm in FA 220e<br />
 <strong>Course Website</strong>: <a
 href="https://kevintshoemaker.github.io/NRES-470/">https://kevintshoemaker.github.io/NRES-470/</a></p>
-<p><strong>Teaching Assistant</strong> Sage Ellis
-(sageellis_at_nevada_dot_unr_dot_edu)<br />
-<strong>TA Office hours</strong>: Fridays from 11am to noon in FA
-301</p>
+<p><strong>Teaching Assistant</strong> Colton Irons
+(cirons_at_nevada_dot_unr_dot_edu)<br />
+<strong>TA Office hours</strong>: Fridays at 11am in FA 301
+(tentative!)</p>
 <div id="course-meeting-times" class="section level3">
 <h3>Course Meeting Times</h3>
 <p><strong>Lecture &amp; Discussion</strong>: M, W at 10am (50 mins) in
-WRB 3046<br />
+OB (Orvis Building) 203<br />
 <strong>Lab</strong>: F at 1pm (2 hrs 45 mins) in FA 301</p>
 </div>
 <div id="course-description" class="section level3">
 <h3>Course description</h3>
-<p>This class will explore how concepts of population ecology can be
-used to inform the conservation and management of natural populations
-and ecosystems. We will emphasize practical approaches to
-problem-solving in ecology, conservation, and wildlife management using
-simulation models and inferential statistics. Topics will include
-Population Viability Analysis (PVA), habitat suitability,
-metapopulations, species interactions (competition and predation),
-threats to wild populations, wildlife management and more. Laboratory
-exercises will provide students with hands-on experience with wildlife
-population models and their practical applications in wildlife ecology
-and management.</p>
+<p>This class explores how concepts of population ecology can be used to
+inform the conservation and management of natural populations and
+ecosystems. We emphasize practical approaches to problem-solving in
+ecology, conservation, and wildlife management using simulation models
+and inferential statistics. Topics include Population Viability Analysis
+(PVA), limits to population growth, metapopulation ecology, species
+interactions (competition and predation), threats to wild populations,
+wildlife management and more. Laboratory exercises provide students with
+hands-on experience with wildlife population models and their practical
+applications in wildlife ecology and management.</p>
 </div>
 <div id="prerequisites" class="section level3">
 <h3>Prerequisites</h3>
 <ul>
 <li>BIOL 314 or NRES 217 (Ecology)<br />
 </li>
-<li>NRES 310 (Wildlife Ecology and Management)</li>
+<li>NRES 310 (Wildlife Ecology and Management)<br />
+NOTE: this course is a prerequisite for NRES 488 (Dynamics and
+Management of Wildlife Populations) and is designed to complement NRES
+421 (Conservation Biology).</li>
 </ul>
 </div>
 <div id="texts" class="section level3">
@@ -514,14 +513,14 @@ periodically.</li>
 <h3>Software</h3>
 <ul>
 <li><a href="https://insightmaker.com/">InsightMaker- web-based systems
-modeling tool</a>(free, no installation needed)<br />
+modeling tool</a>(free, web-based, need account)<br />
 </li>
 <li><a href="https://cran.r-project.org/">R- software for statistical
-computing and graphics</a> (free, open-source)<br />
+computing and graphics</a> (free installation)<br />
 </li>
 <li>Spreadsheet software (MS Excel, Google Sheets or equivalent)</li>
-<li>PointSolutions (interactive classroom software- sign up via
-WebCampus)</li>
+<li>Top Hat (interactive classroom software- invitations should have
+been emailed to you)</li>
 </ul>
 </div>
 <div id="student-learning-outcomes" class="section level3">
@@ -545,16 +544,13 @@ ecology via professional-style oral and written presentations.</p>
 <div id="grading" class="section level3">
 <h3>Grading:</h3>
 <p>The course grade will be based on the following components:</p>
-<p>Lab exercises (7 total) 20% (80 points)<br />
-Lectures/participation 10% (40 points)<br />
-Group project 30% (120 points)<br />
-Midterm exam # 1 (date TBD) 10% (40 points)<br />
-Midterm exam # 2 (date TBD) 10% (40 points)<br />
-Final exam 20% (80 points)</p>
-<p>NOTE: Graduate students enrolled in NRES 670 will have an additional
-50 pts used to calculate their grade (see below) of a total of 370
-points.<br />
-Grading scale: A (100 to 93), A- (92 to 90), B+ (89 to 87), B (86 to
+<p>Lab exercises (7 total) 20%<br />
+Lectures/participation 10%<br />
+Group project 30%<br />
+Midterm exam # 1 (date TBD) 10%<br />
+Midterm exam # 2 (date TBD) 10%<br />
+Final exam 20%</p>
+<p>Grading scale: A (100 to 93), A- (92 to 90), B+ (89 to 87), B (86 to
 83), B- (82 to 80), C+ (79 to 77), C (76 to 73), C- (72 to 70), D+ (69
 to 67), D (66 to 63), D- (62 to 60), F (below 60).</p>
 </div>
@@ -568,12 +564,12 @@ questions, and essay questions requiring synthesis of key concepts.</p>
 <div id="lectures" class="section level3">
 <h3>Lectures</h3>
 <p>Lecture grades will be based primarily on participation and short
-quizzes. Participation is essential to the learning process (and to our
-mutual enjoyment of this class). Learning is not a passive process;
-students are expected to engage with the material in class rather than
-simply listen and take notes. You should be prepared in class to ask
-questions, to answer questions, and to engage in problem-solving
-activities.</p>
+in-class quizzes (via TopHat). Participation is essential to the
+learning process (and to our mutual enjoyment of this class). Learning
+is not a passive process; students are expected to engage with the
+material in class rather than simply listen and take notes. You should
+be prepared in class to ask questions, to answer questions, and to
+engage in problem-solving activities.</p>
 </div>
 <div id="labs" class="section level3">
 <h3>Labs</h3>
@@ -597,11 +593,10 @@ class="section level3">
 <p>Graduate students will be subject to additional expectations in order
 to receive graduate credit for this course. In particular, graduate
 students will be expected to develop an original lecture and lead an
-original lab activity related to their lecture. Graduate students will
-also be expected to achieve a deeper understanding of the course
-material, and therefore will be assigned additional readings from the
-scientific literature and will be expected to participate as leaders in
-discussions and lab activities.</p>
+original lab activity related to a topic relevant to wildlife population
+ecology. Graduate students will also be expected to achieve a deeper
+understanding of the course material, and therefore will be expected to
+participate as leaders in discussions and lab activities.</p>
 </div>
 <div id="make-up-policy-and-late-work" class="section level3">
 <h3>Make-up policy and late work:</h3>
@@ -612,23 +607,15 @@ meeting, you are still responsible for completing the lab activities and
 write-up. Let me or your TA know in advance if you are going to miss
 class or lab.</p>
 </div>
-<div id="pointsolutions" class="section level3">
-<h3>PointSolutions</h3>
-<p>We will be using the PointSolutions interactive learning platform in
-class. You will be able to submit answers to in-class questions using
-Apple or Android smartphones and tablets, laptops, or through text
-message.</p>
-<p>You can sign up using the link on WebCampus. The cost is $15 per year
-for UNR students. For more information please see <a
-href="https://www.unr.edu/digital-learning/tools-and-technologies/student-response-systems/pointsolutions-students">https://www.unr.edu/digital-learning/tools-and-technologies/student-response-systems/pointsolutions-students</a></p>
-</div>
-<div id="statment-on-disabilities-services" class="section level3">
-<h3>Statment on Disabilities Services</h3>
-<p>Any student with a disability needing academic adjustments or
-accommodations is requested to speak with me or the <a
-href="http://www.unr.edu/drc">Disability Resource Center</a> (Pennington
-Achievement Center Suite 230) as soon as possible to arrange for
-appropriate accommodations.</p>
+<div id="top-hat" class="section level3">
+<h3>Top Hat</h3>
+<p>We will be using the <a href="https://tophat.com/">Top Hat</a>
+interactive learning platform in class. You will be able to submit
+answers to in-class questions using Apple or Android smartphones and
+tablets, laptops, or through text message.</p>
+<p>Top Hat is free of charge for UNR students this year! You should all
+have received an invitation via email. You can also enroll using the
+join code 632462.</p>
 </div>
 <div id="statement-on-academic-dishonesty" class="section level3">
 <h3>Statement on Academic Dishonesty</h3>
@@ -637,6 +624,14 @@ and mandates specific sanctions for violations. See the University
 Academic Standards policy: <a
 href="https://www.unr.edu/administrative-manual/6000-6999-curricula-teaching-research/instruction-research-procedures/6502-academic-standards">UAM
 6,502</a>.</p>
+</div>
+<div id="statment-on-disabilities-services" class="section level3">
+<h3>Statment on Disabilities Services</h3>
+<p>Any student with a disability needing academic adjustments or
+accommodations is requested to speak with me or the <a
+href="http://www.unr.edu/drc">Disability Resource Center</a> (Pennington
+Achievement Center Suite 230) as soon as possible to arrange for
+appropriate accommodations.</p>
 </div>
 <div id="statement-on-student-compliance-with-university-policies"
 class="section level3">
