--- a/schedule.html
+++ b/schedule.html
@@ -12,9 +12,9 @@
 <meta name="author" content="NRES 470/670" />
 
 
-<title>Schedule, Spring 2023</title>
+<title>Schedule, Spring 2024</title>
 
-<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.24/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
@@ -142,11 +142,15 @@ $(document).ready(function () {
     href = "index.html";
   var menuAnchor = $('a[href="' + href + '"]');
 
-  // mark it active
-  menuAnchor.tab('show');
-
-  // if it's got a parent navbar menu mark it active as well
-  menuAnchor.closest('li.dropdown').addClass('active');
+  // mark the anchor link active (and if it's in a dropdown, also mark that active)
+  var dropdown = menuAnchor.closest('li.dropdown');
+  if (window.bootstrap) { // Bootstrap 4+
+    menuAnchor.addClass('active');
+    dropdown.find('> .dropdown-toggle').addClass('active');
+  } else { // Bootstrap 3
+    menuAnchor.parent().addClass('active');
+    dropdown.addClass('active');
+  }
 
   // Navbar adjustments
   var navHeight = $(".navbar").first().height() + 15;
@@ -175,8 +179,8 @@ $(document).ready(function () {
   border-radius: 4px;
 }
 
-.tabset-dropdown > .nav-tabs > li.active:before {
-  content: "";
+.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "\e259";
   font-family: 'Glyphicons Halflings';
   display: inline-block;
   padding: 10px;
@@ -184,16 +188,9 @@ $(document).ready(function () {
 }
 
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-  content: "&#xe258;";
-  border: none;
-}
-
-.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-  content: "";
+  content: "\e258";
   font-family: 'Glyphicons Halflings';
-  display: inline-block;
-  padding: 10px;
-  border-right: 1px solid #ddd;
+  border: none;
 }
 
 .tabset-dropdown > .nav-tabs > li.active {
@@ -378,20 +375,21 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Schedule, Spring 2023</h1>
+<h1 class="title toc-ignore">Schedule, Spring 2024</h1>
 <h4 class="author">NRES 470/670</h4>
 
 </div>
 
 
 <p>Please check for updates frequently!</p>
-<table>
+<table style="width:100%;">
 <colgroup>
-<col width="3%" />
 <col width="4%" />
-<col width="51%" />
-<col width="18%" />
-<col width="21%" />
+<col width="5%" />
+<col width="45%" />
+<col width="12%" />
+<col width="23%" />
+<col width="8%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -400,387 +398,437 @@ $(document).ready(function () {
 <th align="left">Topic</th>
 <th align="left">Readings</th>
 <th align="left">Due</th>
+<th align="left">X</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td align="left">Week 1</td>
-<td align="left">1/23/2023</td>
+<td align="left">1/22/2024</td>
 <td align="left">LECTURE: <a href="INTRO.html">Course overview</a>; <a
 href="LECTURE1.html">Intro to Systems Thinking</a></td>
 <td align="left"></td>
 <td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">1/25/2023</td>
+<td align="left">1/24/2024</td>
 <td align="left">LECTURE: <a href="LECTURE2.html">Intro to Population
 Ecology; Exponential growth</a></td>
 <td align="left">Gotelli Chapter 1</td>
 <td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">1/27/2023</td>
+<td align="left">1/26/2024</td>
 <td align="left">LAB 1: <a href="LAB1.html">Introduction to population
 modeling in Excel, InsightMaker, and R</a></td>
-<td align="left">Gotelli Chapter 1</td>
+<td align="left"></td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 2</td>
-<td align="left">1/30/2023</td>
+<td align="left">1/29/2024</td>
 <td align="left">LECTURE: <a href="LECTURE2.html">Intro to Population
 Ecology; Exponential growth</a></td>
+<td align="left"></td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">2/1/2023</td>
+<td align="left">1/31/2024</td>
 <td align="left">LECTURE: <a href="LECTURE3.html">Malthus and
 exponential growth</a></td>
 <td align="left">Gotelli Chapter 2</td>
 <td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">2/3/2023</td>
+<td align="left">2/2/2024</td>
 <td align="left"><a href="LAB1.html">LAB 1 (cont’d)</a></td>
+<td align="left"></td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 3</td>
-<td align="left">2/6/2023</td>
+<td align="left">2/5/2024</td>
 <td align="left">LECTURE: <a href="LECTURE4.html">Density-dependent
 population growth</a></td>
 <td align="left">Gotelli Chapter 2</td>
 <td align="left"></td>
+<td align="left">Instructor away</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">2/8/2023</td>
+<td align="left">2/7/2024</td>
 <td align="left">LECTURE: <a href="LECTURE4.html">Density-dependent
 population growth</a></td>
 <td align="left"></td>
 <td align="left"></td>
+<td align="left">Instructor away</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">2/10/2023</td>
+<td align="left">2/9/2024</td>
 <td align="left">LAB 2: <a href="LAB2.html">Density-dependent
 populations in InsightMaker; MSY</a></td>
 <td align="left"></td>
 <td align="left">Lab 1</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 4</td>
-<td align="left">2/13/2023</td>
+<td align="left">2/12/2024</td>
 <td align="left">LECTURE: <a href="LECTURE5.html">Passenger pigeon/Allee
 Effect</a></td>
 <td align="left">Gotelli Chapter 3</td>
 <td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">2/15/2023</td>
+<td align="left">2/14/2024</td>
 <td align="left">LECTURE: <a href="LECTURE6.html">Age-structured
 populations</a></td>
 <td align="left">Gotelli Chapter 3</td>
 <td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">2/17/2023</td>
+<td align="left">2/16/2024</td>
 <td align="left">LAB 3: <a href="LAB3.html">Age-structured populations
 in Excel and InsightMaker</a></td>
 <td align="left"></td>
 <td align="left">Lab 2</td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 5</td>
-<td align="left">2/20/2023</td>
+<td align="left">2/19/2024</td>
 <td align="left">President’s Day (no class)</td>
+<td align="left"></td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">2/22/2023</td>
+<td align="left">2/21/2024</td>
 <td align="left">LECTURE: <a href="LECTURE6.html">Age-structured
 populations</a></td>
 <td align="left">Gotelli Chapter 3</td>
 <td align="left"><a href="FINAL_PROJECTS.html">Get in project
 groups</a></td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">2/24/2023</td>
+<td align="left">2/23/2024</td>
 <td align="left">LAB 4: <a href="LAB4.html">Matrix population models in
 R and InsightMaker</a></td>
 <td align="left"></td>
 <td align="left">Lab 3</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 6</td>
-<td align="left">2/27/2023</td>
+<td align="left">2/26/2024</td>
 <td align="left">LECTURE: <a href="LECTURE7.html">Matrix population
 models</a></td>
 <td align="left"><a href="heppell1.pdf">Heppell 1998</a> (Optional)</td>
 <td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">3/1/2023</td>
+<td align="left">2/28/2024</td>
 <td align="left">LECTURE: <a href="LECTURE7.html">Matrix population
 models</a></td>
+<td align="left"></td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">3/3/2023</td>
+<td align="left">3/1/2024</td>
 <td align="left"><a href="FINAL_PROJECTS.html">Work in final project
 groups: PVA proposals</a></td>
+<td align="left"></td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 7</td>
-<td align="left">3/6/2023</td>
+<td align="left">3/4/2024</td>
 <td align="left">LECTURE: <a href="LECTURE7.html">Matrix population
 models</a></td>
 <td align="left"></td>
 <td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">3/8/2023</td>
+<td align="left">3/6/2024</td>
 <td align="left">LECTURE: <a href="LECTURE8.html">Stochasticity and
 uncertainty</a></td>
 <td align="left"><a href="Regan_2002.pdf">Regan 2002</a></td>
 <td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">3/10/2023</td>
+<td align="left">3/8/2024</td>
 <td align="left">LAB 5: <a href="LAB5.html">Stochasticity and
 uncertainty</a></td>
 <td align="left"></td>
 <td align="left">PVA proposals, Lab 4</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 8</td>
-<td align="left">3/13/2023</td>
+<td align="left">3/11/2024</td>
 <td align="left">Review for Midterm #1</td>
+<td align="left"></td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">3/15/2023</td>
+<td align="left">3/13/2024</td>
 <td align="left">MIDTERM #1</td>
+<td align="left"></td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">3/17/2023</td>
+<td align="left">3/15/2024</td>
 <td align="left"><a href="FINAL_PROJECTS.html">PVA projects</a>: group
 meetings (or make alternate arrangements for a group meeting time)</td>
+<td align="left"></td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 9</td>
-<td align="left">3/20/2023</td>
-<td align="left">Spring Break (no class)</td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left">3/22/2023</td>
-<td align="left">Spring Break (no class)</td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left">3/24/2023</td>
-<td align="left">Spring Break (no class)</td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left">Week 10</td>
-<td align="left">3/27/2023</td>
+<td align="left">3/18/2024</td>
 <td align="left">LECTURE: <a href="LECTURE8.html">Stochasticity and
 uncertainty</a></td>
 <td align="left"></td>
 <td align="left"></td>
-</tr>
-<tr class="odd">
 <td align="left"></td>
-<td align="left">3/29/2023</td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left">3/20/2024</td>
 <td align="left">LECTURE: <a href="LECTURE9.html">Small population
 paradigm</a></td>
 <td align="left"><a href="caughley1.pdf">Caughley 1994</a></td>
 <td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left">3/22/2024</td>
+<td align="left">Work on <a href="FINAL_PROJECTS.html">PVA projects</a>
+(<a href="LECTURE12.html">PVA models</a> due Apr 10)</td>
+<td align="left"></td>
+<td align="left">Lab 5</td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left">Week 10</td>
+<td align="left">3/25/2024</td>
+<td align="left">Spring Break (no class)</td>
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left">3/27/2024</td>
+<td align="left">Spring Break (no class)</td>
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">3/31/2023</td>
-<td align="left">Work on <a href="FINAL_PROJECTS.html">PVA projects</a>
-(<a href="LECTURE12.html">PVA models</a> due Apr 12)</td>
+<td align="left">3/29/2024</td>
+<td align="left">Spring Break (no class)</td>
 <td align="left"></td>
-<td align="left">Lab 5</td>
+<td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 11</td>
-<td align="left">4/3/2023</td>
+<td align="left">4/1/2024</td>
 <td align="left">LECTURE: <a href="LECTURE11.html">Declining population
 paradigm</a></td>
 <td align="left"><a href="caughley1.pdf">Caughley 1994</a></td>
 <td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">4/5/2023</td>
+<td align="left">4/3/2024</td>
 <td align="left">LECTURE: <a
 href="LECTURE13.html">Metapopulations</a></td>
 <td align="left">Gotelli Chapter 4</td>
 <td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">4/7/2023</td>
+<td align="left">4/5/2024</td>
 <td align="left">LAB 6: <a href="LAB6.html">Metapopulation modeling in
 InsightMaker</a></td>
+<td align="left"></td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 12</td>
-<td align="left">4/10/2023</td>
+<td align="left">4/8/2024</td>
 <td align="left">LECTURE: <a
 href="LECTURE13.html">Metapopulations</a></td>
 <td align="left">Gotelli Chapter 4</td>
 <td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">4/12/2023</td>
+<td align="left">4/10/2024</td>
 <td align="left">LECTURE: <a href="LECTURE13.html">Source-sink
 dynamics</a></td>
 <td align="left"><a href="griffin1.pdf">Griffin et al</a></td>
 <td align="left">PVA models due</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">4/14/2023</td>
+<td align="left">4/12/2024</td>
 <td align="left"><a href="FINAL_PROJECTS.html">PVA projects</a>: group
 meetings (working model and description)</td>
+<td align="left"></td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 13</td>
-<td align="left">4/17/2023</td>
+<td align="left">4/15/2024</td>
 <td align="left">Review for Midterm #2</td>
+<td align="left"></td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">4/19/2023</td>
+<td align="left">4/17/2024</td>
 <td align="left">MIDTERM #2</td>
+<td align="left"></td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">4/21/2023</td>
+<td align="left">4/19/2024</td>
 <td align="left">LAB 7 (optional-no assignment): <a
 href="LAB7.html">Parameter estimation: mark-recapture data</a></td>
 <td align="left"></td>
 <td align="left">Lab 6</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 14</td>
-<td align="left">4/24/2023</td>
+<td align="left">4/22/2024</td>
 <td align="left">LECTURE: <a href="LECTURE16.html">Species interactions:
 competition</a></td>
 <td align="left">Gotelli Chapter 5</td>
 <td align="left">Complete PVA drafts</td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">4/26/2023</td>
+<td align="left">4/24/2024</td>
 <td align="left">LECTURE: <a href="LECTURE16.html">Species interactions:
 competition</a></td>
 <td align="left">Gotelli Chapter 5</td>
 <td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">4/28/2023</td>
+<td align="left">4/26/2024</td>
 <td align="left">LAB: Final Project Peer Review (submit peer
 review)</td>
+<td align="left"></td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 15</td>
-<td align="left">5/1/2023</td>
+<td align="left">4/29/2024</td>
 <td align="left">LECTURE: <a href="LECTURE17.html">Species interactions:
 predator-prey</a></td>
 <td align="left">Gotelli Chapter 6</td>
 <td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">5/3/2023</td>
+<td align="left">5/1/2024</td>
 <td align="left">LECTURE: STUDENT PRESENTATIONS</td>
+<td align="left"></td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">5/5/2023</td>
+<td align="left">5/3/2024</td>
 <td align="left">LAB: STUDENT PRESENTATIONS</td>
+<td align="left"></td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 16</td>
-<td align="left">5/8/2023</td>
+<td align="left">5/6/2024</td>
 <td align="left">LECTURE: <a href="LECTURE15.html">Parameter
 estimation</a></td>
 <td align="left"></td>
 <td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">5/10/2023</td>
+<td align="left">5/8/2024</td>
 <td align="left">NO CLASS: Prep Day</td>
+<td align="left"></td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
+<td align="left">Week 17</td>
+<td align="left">5/13/2024</td>
+<td align="left">FINAL EXAM (10:15am to 12:15pm)</td>
 <td align="left"></td>
-<td align="left">5/12/2023</td>
-<td align="left">FINAL EXAM (9:50 to 11:50am)</td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
-<td align="left">Week 17</td>
-<td align="left">5/15/2023</td>
+<td align="left"></td>
+<td align="left">5/15/2024</td>
 <td align="left">FINAL PAPERS DUE</td>
 <td align="left"></td>
 <td align="left">Final PVA write-up, Extra credit assignments</td>
+<td align="left"></td>
 </tr>
 </tbody>
 </table>
